Save/Update files [ci skip]

--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -480,7 +480,7 @@
  rumored_crypto_catholics:0 "隠れカトリックへの恐れ"
  desc_rumored_crypto_catholics:0 "密かに国家を破壊しようとしている隠れカトリック教徒に関する噂を調査することに対し不本意だという事実は、田舎における様々な陰謀説を加速させた。"
  protestantism_events.7.t:0 "[Root.GetName]「最後の日」"
- protestantism_events.7.d:0 "人々が最後の日が近づいていると確信したような、宗教的熱情が[Root.GetName]を支配している。農民は空を見てその兆候について語り、国教会の教義に反して地元の司祭たちは黙示録の説教を与えている。千年王国が州を覆うにつれ、非難はプロテスタントであると公言している州と州の教会自体に向けられているが、明らかに御名に従った行動ではない。\nこれまでの公式な反応は、[Root.Owner.Capital.GetCapitalName]の聖職者の間でさえ、これらの恐怖が正当であると感じているため、非常に弱いものである。"
+ protestantism_events.7.d:0 "宗教的な熱狂が[Root.GetName]を襲い、人々は終末の日が近づいていると確信している。農民は空を見てその兆候について語り、国教会の教義に反して地元の司祭たちは黙示録の説教を与えている。千年王国説が州を席巻する中、プロテスタントであると公言していながらも明らかに御名に従った行動ではない州や州教会自体に非難が向けられている。\n[Root.Owner.Capital.GetCapitalName]の聖職者の間でさえ、これらの懸念が正当であると感じている者がいるため、これまでのところの公式な反応は非常に弱弱しいものである。"
  protestantism_events.7.a:0 "事態を沈静化せよ。"
  protestantism_events.7.b:0 "力強い行動を取る。"
  protestantism_events.7.c:0 "彼らの恐れは正しい。悔い改めよ、終わりの日は近い！"
@@ -549,7 +549,7 @@
  plagued_concience:0 "良心の悩み"
  desc_plagued_concience:0 "我々の支配者は、国教会の教えを信仰する熱心な信者からは遠く離れたところにいる。これが我々の政策に直接影響するわけではないが、教会の運営自体の優先度が低くなっていることを示している。"
  protestantism_events.17.t:0 "[Root.Heir.GetName]と[Root.Monarch.GetName]の間の摩擦"
- protestantism_events.17.d:0 "[Root.Heir.GetName]のカトリックへの関心は長年にわたって成長したに過ぎず、[Root.Heir.GetSheHe]はカトリックの世界の哲学者、科学者、芸術家と[Root.Heir.GetHerselfHimself]を取り囲んでいる。これは厄介なものへと成長した。[Root.GetName]教会の長として、改革の価値を支えるのは[Root.Monarch.GetName]の義務である。[Root.Heir.GetName]が[Root.Heir.GetHerHis]自身を変えると確信できない限り、教会の権威は苦しむかもしれない。"
+ protestantism_events.17.d:0 "[Root.Heir.GetName]のカトリック主義への関心は年々高まっており、[Root.Heir.GetSheHe]は周囲をカトリック世界の哲学者や科学者や芸術家で囲んでいる。これはある種の恥ずかしいこととなっている。[Root.GetName]教会の長として、改革の価値を守るのは[Root.Monarch.GetName]の義務である。[Root.Heir.GetName]が[Root.Heir.GetHerHis]の変化を説得できない限り、教会の権威は傷つくかもしれない。"
  protestantism_events.17.a:0 "[Root.Heir.GetName]に[Root.Heir.GetHerHis]のやり方を強制的に変更させることを試みる。"
  protestantism_events.17.b:0 "意見が一致しないことに同意する。"
  protestantism_events.18.t:0 "[Root.Heir.GetName]は[Root.Heir.GetHerHis]の誤りに気づく"
@@ -559,7 +559,7 @@
  protestantism_events.19.d:0 "[Root.Monarch.GetHerHis]の若い頃から、[Root.Monarch.GetName]は[Root.GetName]の教会の教えにある真実を疑っていたが、最終的に、[Root.Monarch.GetSheHe]は個人的な改宗だけでなく、王国全体の対抗宗教改革を開始した。道のりは決して簡単なものとはならないだろうが、誰も[Root.Monarch.GetName]同様、すべてうまくいくとは確信していない。"
  protestantism_events.19.a:0 "我々は神への信仰に向かおう。"
  catholic_zealot:0 "君主の改宗"
- desc_catholic_zealot:0 "我々の君主は、カトリックが真の信仰であり、すべての国民にふさわしいことをするための何かを行うという個人的な確信のために国家を改宗した。"
+ desc_catholic_zealot:0 "我々の君主は、カトリックが真の信仰であるという個人的な信念により国教を改宗させ、すべての臣民をそれに従わせるためなら何でもするつもりのようだ。"
  protestantism_events.20.t:0 "[Root.Heir.GetName]の不本意な妥協"
  protestantism_events.20.d:0 "可能な限り明確に王室の後継者に期待を寄せようとしているにもかかわらず、[Root.Heir.GetName]は[Root.Heir.GetHerHis]のカトリック教会に対する害となる魅力を擁護することを主張している。首都で風刺や宣伝を行っている者たちは、[Root.Monarch.GetName]が王国の信義に厚い者を守るだけではなく、自分の親族を支配することさえできていないように思われる事実について、ビラを配布し始めている。"
  protestantism_events.20.a:0 "やるべきことは何もない。"
@@ -602,14 +602,14 @@
  protestantism_events.25.b:0 "もしそれが家長にとって十分に良いことであったなら、私にとっても良いことだ。"
  protestantism_events.25.c:0 "もしそれが前任者にとって十分に良いことであったなら、私にとっても良いことだ。"
  protestant_bigamy:0 "重婚"
- desc_protestant_bigamy:0 "高貴な配偶者のそばにいる相手と罪の中で生活するよりも、または永遠に愛のない結婚生活を送るよりも、我々の支配者は、家長の例を踏襲して複数の配偶者と結婚した。"
+ desc_protestant_bigamy:0 "王家の配偶者以外の伴侶と罪を犯したり、または愛のない結婚生活を永遠に送るよりも、我々の支配者は、家父長の例を踏襲して複数の配偶者と結婚した。"
  bigamy_of_ruler:0 "重婚"
  protestantism_events.26.t:0 "拡大しすぎた裁判所"
  protestantism_events.26.d:0 "[Root.GetName]の法律にモーセの律法を直接組み入れたことで、国内の一部の地域においては、国家の司法制度が前例のない成長を遂げた。告発が着実な流れとして定着したことで、それは、ほとんど管理できない数の裁判事件へと発展した。それだけでなく、死刑判決の件数も大幅に増加しており、有罪判決を受けた者が報酬として一定の金額を提示することができれば、そのような有罪判決に対して猶予を与えるという、確立されていない慣行によって、我々は非常に悪い状況を抱え込んでいる。"
  protestantism_events.26.a:0 "彼らが有罪になった場合、彼らは罪を犯しており、償わねばならない。"
  protestantism_events.26.b:0 "裁判所にこれを処理するためのより多くの資源を提供しよう。"
  mosaic_law_accusations:0 "あふれた裁判所"
- desc_mosaic_law_accusations:0 "モーセの律法を直接我が国の法律に組み入れたことで、死刑判決につながった姦通などの、どちらかといえば一般的な事件がもたらされた。この地域の人口は法律をうまく活用しており、我々の裁判所の権威の高まりを見ることを奨励しているが、事件の数はほとんど管理できないほどに増加している。"
+ desc_mosaic_law_accusations:0 "モーセの律法を直接我が国の法律に組み入れたことで、姦通などの、どちらかといえば一般的な事件にまで死刑判決が下されることにつながった。この地域の人々は法律をうまく活用しており、我々の裁判所の権威が高まることは心強いのだが、事件の数はほとんど管理できないほどに増加している。"
  protestantism_events.27.t:0 "厳格な神学者"
  protestantism_events.27.d:0 "最近、[Root.GetName]教会の教育制度から珍しい人物が出現している。彼は奇妙なカリスマと信念を持った司祭であるが、彼の信念に従って教会を変えようとするのではなく、国教会のプロテスタントの伝統と教義を維持することの価値を植え付けることを固く決心している。\nこのような時代において、これは異例の人物であり、間違いなく我々は彼をうまく利用することができるだろう。"
  protestantism_events.27.a:0 "彼に我々の元にいる司祭を教育してもらおう。"
@@ -618,18 +618,18 @@
  stern_theologian_education:0 "厳格な神学者"
  desc_stern_theologian_education:0 "我々の国教会の聖職者たちへの教育は、非常に高度にカリスマ的かつ独断的な指導者であり、我々の聖職者に国教会のための正しい熱意を与えることができる人物によって影響を受けている。"
  stern_theologian_mission:0 "厳格な神学者"
- desc_stern_theologian_mission:0 "異教徒や異端者を改宗する試みは、非常にカリスマ的かつ独断的な指導者であり、他にほとんどいないような国教会に加わる意志を喚起する人物によって導かれている。"
+ desc_stern_theologian_mission:0 "異教徒や異端者を改宗する試みは、非常にカリスマ的かつ独断的な指導者によって率いられている。彼は、他の数少ない人物と同様に国教会への参加意欲を鼓舞する人物である。"
  stern_theologian_leader:0 "厳格な神学者"
  desc_stern_theologian_leader:0 "我々の国教会は、非常にカリスマ的かつ独断的な指導者によって率いられている。何よりも伝統と忠誠を重んじる厳格な神学者である。"
  protestantism_events.28.t:0 "聖餐象徴説"
- protestantism_events.28.d:0 "キリストの身体が実際に聖体の中に物理的に存在しているかどうかは、プロテスタントとカトリックが改革の間に意見を異にした主な点の一つであった。しかし、ルター派の礼典的結合を受け入れることに問題を抱える人々もいる。我が国で若干の流通を得た最近の出版物は、これらの団体の一つによって執筆されたようだ。すぐに、間違いなく忘れ去られるだろうが、短期間に我々の国教会の合法性が疑問視されている。"
+ protestantism_events.28.d:0 "キリストの身体が実際に聖体の中に物理的に存在しているかどうかは、プロテスタントとカトリックが宗教改革中に意見を異にした主な点の一つであった。しかし、ルター派の礼典的結合を受け入れることさえ難しい人々もいる。最近我が国である程度流通した出版物は、これらの団体の一つによって執筆されたようだ。すぐに、間違いなく忘れ去られるだろうが、短期間に我々の国教会の正統性が疑問視されている。"
  protestantism_events.28.a:0 "残念だ。"
  protestantism_events.28.b:0 "このカルヴァン主義者じみた扇動者を見つけ、追放せよ。"
  protestantism_events.28.c:0 "この冊子の拡散の阻止を試みよう。"
  protestantism_events.29.t:0 "改革派は[Root.GetName]の教会を称賛する"
- protestantism_events.29.d:0 "改革の最前線に立っている偉大な思想家の一人は、最近、論争の間だけでなく、他の人が彼の出版物の一つに従う良い模範として、我が国を支えている。これは確かに我々の国際的な評判を強化し、教会自体の権威の背後にさらなる重みを与えるだろう。"
+ protestantism_events.29.d:0 "宗教改革の最前線に立っている偉大な思想家の一人は、最近、彼の論争の中だけでなく出版物の中で、他国が模範とすべき良い例として我が国を挙げている。これは確かに我々の国際的な評判を強化し、教会自体の権威にさらなる重みを与えるだろう。"
  protestantism_events.29.a:0 "国内の宣伝にこれを利用する。"
- protestantism_events.29.b:0 "これは我々を他のプロテスタントたちに近づけるのに役立るだろう。"
+ protestantism_events.29.b:0 "我々と他のプロテスタントとの接近をもたらすだろう。"
  protestantism_events.29.b.tt:0 "すべての§Yカトリック§!の国家との関係が§R35§!減少します。\nすべての§Yプロテスタント§!国家との関係が§G35§!増加します。\nこれらの効果は今後12年で消滅します。"
  beacon_of_protestantism:0 "理想的なプロテスタント国家"
  protestant_ideal:0 "理想的なプロテスタント国家"
