--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -6603,7 +6603,7 @@
  pru_access_franconian_conquest_failure_tt:0 "\n§R失敗時§!：\n§Yオーバーフランケン§!地域および§Yウンターフランケン§!地域の領土を失い、以下を被ります：\n侵略的拡大：§R+15§!"
  release_franconia_tt:1 "\n自国が領有する§Yオーバーフランケン§!地域および§Yウンターフランケン§!地域の全州は、自国の権限から独立し、@FKN フランケンの下に割譲、解放されます。"
  gain_15_ae_n_s_germany_tt:0 "\n首都が§Y北ドイツ§!地方もしくは§Y南ドイツ§!地方にある国家全てで、自国に対する侵略的拡張§R+15§!を獲得します"
- pru_accepting_cultures_reduces_3_AE_tt:0 "これ以降、§Y文化§!を促進すると自国の§Y侵略的拡大§!が§G-3§!減少します"
+ pru_accepting_cultures_reduces_3_AE_tt:0 "これ以降、§Y文化§!を受容すると自国の§Y侵略的拡大§!が§G-3§!減少します"
  pru_200_dev_unlock_Ability_x_tt:2 "\n£no£ §Yポーランド§!地方で開発度を§Y200§!以上直接保有している状態でミッションを完了した場合、§Y宗教改革の時代§!中、栄光能力「§Yポーランド王冠§!」が利用できるようになります。"
  pru_200_dev_unlock_Ability_tt:2 "\n£yes£ §Yポーランド§!地方で開発度を§Y200§!以上直接保有している状態でミッションを完了した場合、§Y宗教改革の時代§!中、栄光能力「§Yポーランド王冠§!」が利用できるようになります。"
  pru_adding_provinces_to_trade_c_merc_prod_tt:1 "\n自国の州を§Y交易会社§!に追加すると、追加州で開発度を§G1§! £dip£獲得し、さらに重商主義を§G1§!獲得します。"
