--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1945,7 +1945,7 @@
  mercs.8.a:0 "彼は名簿への素晴らしい追加になる。"
  mercs.8.b:0 "ありがとう、だが遠慮しておくよ。"
  mercs.9.t:0 "戦争は変わった"
- mercs.9.d:0 "銃器の広範な使用が進んだことは、ヨーロッパにおける戦争の様相を根本的に変えた。近代的な武器で武装し、近代的な戦術を採用している多くの新しい傭兵団が設立された一方で、他の団は適応できず、高度な戦争のこの新時代における関連から脱落していった。"
+ mercs.9.d:0 "銃器の広範な使用が進んだことは、ヨーロッパにおける戦争の様相を根本的に変えた。近代的な武器で武装し、近代的な戦術を採用している多くの新しい傭兵団が設立された一方で、この洗練された戦争の新時代に適応できず、その存在感を失ってしまった傭兵団もある。"
  mercs.9.a:0 "得るは捨つるにあり。"
  new_mercs_europe_tt:0 "§Yヘッセン猟兵団が雇用可能になります§!\n§Yスコットランド衛兵が雇用可能になります§!\n§Yセイメニが雇用可能になります§!\n§Y黒衛団はもはや雇用できません§!\n§Yバンデ・ネーレはもはや雇用できません§!\n§Yギャローグラスはもはや雇用できません§!\n§Yレッドシャンクはもはや雇用できません§!"
  mercs.10.t:0 "傭兵の熱意"
