--- a/source/localisation/res_publica_l_english.yml
+++ b/source/localisation/res_publica_l_english.yml
@@ -13,7 +13,7 @@
  no_taxes_for_tyrants:0 "暴君に払う税金はない"
  desc_no_taxes_for_tyrants:0 "共和国の一部の有権者は、独裁的・専制的と見なされている統治者への納税を拒否している。"
  act_of_seclusion:0 "排除令"
- desc_act_of_seclusion:0 "議会派は、オラニエ家を弱める外国の権力と行動について交渉してきた。"
+ desc_act_of_seclusion:0 "議会派は、オラニエ家を弱体化させる行為について外国勢力と交渉してきた。"
  distrust_among_nobles:0 "貴族たちの不信"
  desc_distrust_among_nobles:0 "統治者がオラニエ家に反対したことで、一部の国軍の指揮官は国家の指導力に不信を抱くようになった。"
  orangists_rally_against_rival:0 "ライバルに対するオラニエ派貴族の結束"
@@ -361,13 +361,13 @@
  patriotic_curriculum:0 "愛国的教育"
  desc_patriotic_curriculum:0 "海軍士官学校は愛国的義務に関する教育を行っている。"
  maintenance_curriculum:0 "技術的教育"
- desc_maintenance_curriculum:0 "海軍士官学校は海軍精神や艦船の維持管理について教育する"
+ desc_maintenance_curriculum:0 "海軍士官学校は海軍精神や艦船の維持管理について教育する。"
  galley_veterans:0 "熟練したガレー船"
  desc_galley_veterans:0 "熟練の乗組員によって開発された戦術の進歩はガレー船の戦いにおいて標準化されている。"
  heavy_ship_veterans:0 "熟練した大型船"
  desc_heavy_ship_veterans:0 "熟練の乗組員によって開発された戦術の進歩は大型船を含む戦いにおいて標準化されている。"
  grieving_sailors:0 "悲嘆する水兵たち"
- desc_grieving_sailors:0 "交易艦隊の終焉は我々の水兵たちの間のより多くの迷信に、負の効果を与えている。"
+ desc_grieving_sailors:0 "交易船団の消滅は、我々の船員の中でも迷信深い人々に悪影響を及ぼした。"
  repairing_decayed_ships:0 "腐朽した船の修復"
  desc_repairing_decayed_ships:0 "我々は遠洋航海の間、船の損傷を修復する特別な努力を行ってきた。"
  rotting_wood:0 "腐敗した木材"
@@ -381,7 +381,7 @@
  popular_noble:0 "人気のある貴族"
  desc_popular_noble:0 "我々の最も社交的な貴族の一つが海外で寛大な姿勢を示している。"
  vassals_feel_safe:0 "属国は安全を感じる"
- desc_vassals_feel_safe:0 "我々の軍隊の強さと権力に対する寛大さは、我々の属国に我々の傘の下で安全に保護されていると感じさせた。"
+ desc_vassals_feel_safe:0 "我々の軍隊の強さと彼らの権利に対する寛大さは、我々の属国に我々の傘の下で安全に保護されていると感じさせた。"
  firm_hand:0 "強硬な手腕"
  desc_firm_hand:0 "圧力とてこを適切に使用したことで、我々の属国からさらにもう少し搾り取ることができた。"
  emissary_authority:0 "使節の権威"
@@ -395,9 +395,9 @@
  free_freethinkers:0 "自由な自由主義者"
  desc_free_freethinkers:0 "自由主義者が迫害されずに知識を追求することは、我々の首都の社交界や大学での活動の急増を引き起こした。"
  fair_laws:0 "公正な法"
- desc_fair_laws:0 "真の正義に対する公約は、我々の人々の大部分で人気があることが証明されている。"
+ desc_fair_laws:0 "真の正義を貫くことは、国民の大部分の層に支持されることが証明されている。"
  ineffective_missionary:0 "効果のない宣教師たち"
- desc_ineffective_missionary:0 "人道主義への公約は、我々の宣教師が非信者を強調して説得することを困難にしていることを示している。"
+ desc_ineffective_missionary:0 "人道主義の公約は、我々の宣教師がその信仰へ非信者を勧誘することを困難にしていることを意味している。"
  fair_dealing:0 "公正な取引"
  arrogant_administrators:0 "傲慢な統治者"
  honest_broker:0 "誠実な仲介者"
@@ -425,10 +425,10 @@
  ideagroups.1705.d:0 "我々の才能豊かな造船所や海軍制度に関する知らせは、世界に広がっている。外国の王子は我々の港を見学し、我々の人々と話すことを求めてきた。これは我々が拒否できない大きな名誉である！"
  ideagroups.1705.a:0 "バンザーイ！"
  ideagroups.1706.t:0 "愛国的寄付"
- ideagroups.1706.d:0 "強力な商人が我々の交易と探検のための海上交通路を安全に保つための警護への感謝の意を示したいと表明してきた。交易会社は我々の戦闘艦隊のための新たな軍艦を建造し、それを国家に捧げたいと言ってきている。"
+ ideagroups.1706.d:0 "海上を警護し、交易や探検のための航路を自由に保っている我々の努力に対し、有力な商人が感謝の意を示したいと考えている。交易会社は我々の戦闘艦隊のために新たな軍艦を建造し、それを国家に捧げたいと言ってきている。"
  ideagroups.1706.a:0 "素晴らしい。"
  ideagroups.1707.t:0 "海難事故"
- ideagroups.1707.d:0 "交易艦隊全体が海で失われ、すべてを水中の墓へと奪い去ってしまった。災害の知らせは埠頭を広く覆っており、我々の迷信深い船員たちは心に大きな損失を抱えている。"
+ ideagroups.1707.d:0 "交易船団全体が海で失われ、乗組員全員が水中の墓場へと連れ去られてしまった。災害の知らせは埠頭を駆け巡り、我々の迷信深い船員たちは喪失を深く胸に刻んでいる。"
  ideagroups.1707.a:0 "悲しませておこう。"
  ideagroups.1707.b:0 "そう、我々はいくつかの準備を失う。"
  ideagroups.1708.t:0 "徴兵対象者の不足"
@@ -449,10 +449,10 @@
  ideagroups.1801.d:0 "我々の外交団の努力は、我々の主張が公正で、行動が正当であり、隣人が我々を恐れる必要はほとんどないと世界を納得させてきた。我々がやっていることは、すべての人にとって最善の利益であると主張されている。"
  ideagroups.1801.a:0 "可愛い人よ、ここへ来なさい。"
  ideagroups.1802.t:0 "人気の貴族"
- ideagroups.1802.d:0 "我々の最も気前の良い貴族の一人は、彼が気前よく自腹を切って費やしたことは言うまでもなく、我々の壮大な物語と共に、外国の宮廷を大きく楽しませた旅から戻ってきた。偉大な土地だけがそのような歓迎された賓客を作ることができるものだ。"
+ ideagroups.1802.d:0 "我々の最も社交的な貴族の一人が、言うまでもなく気前よく自腹を切って多額を費やし、我々の壮大な物語で外国の宮廷を大いに楽しませた旅から戻ってきた。偉大な国家だけがそのような歓迎された賓客を作ることができるものだ。"
  ideagroups.1802.a:0 "少なくとも彼らは何かに役に立つ。"
  ideagroups.1803.t:0 "属国は安全を感じる"
- ideagroups.1803.d:0 "我々の軍隊の強さと権力に対する寛大さは、我々の属国に我々の傘の下で安全に保護されていると感じさせた。この安全な関係を確保するために、彼らは我々に支払うことを望む貢物を増やした。"
+ ideagroups.1803.d:0 "我が国の軍隊の強さと属国の権利に対する寛大さは、属国に我々の傘の下で安全に保護されていると感じさせている。この安全保障関係を確かなものとするため、彼らは我々に支払う貢物を増やした。"
  ideagroups.1803.a:0 "羊飼いは羊の毛を刈るが、それを殺すことはない。"
  ideagroups.1804.t:0 "公正な取引"
  ideagroups.1804.d:0 "植民地と属国を持つ帝国は騒々しい家族に似ており、すべてを支配するためには、強硬だが公正な手段が必要である。最近の政策は、我々の従属国の賞賛を得ており、我々全員を互いに緊密なものとしている。"
@@ -470,55 +470,55 @@
  ideagroups.1808.d:0 "我々の外交官の何人かに、大規模な諜報活動への関与の疑いがかかっている。今や、我々が送る大使や使者すべてが諜報員なのではと怪しまれており、離任の際に非常に厳しい尋問を受けている。我々の評判を回復するには時間がかかるだろう。"
  ideagroups.1808.a:0 "信頼されないというのは残念なことだ。"
  ideagroups.1809.t:0 "見当違いの要求"
- ideagroups.1809.d:0 "我々が属国に迫った圧力は首都では妥当と思われるかもしれないが、我々の要求のいくつかは、保護下に置いた小規模な王家によって侮辱されているものもある。条項の交渉には予想以上に時間がかかるだろう。"
+ ideagroups.1809.d:0 "我々が属国に迫った圧力は首都では妥当と思われるかもしれないが、我々の要求のいくつかは、保護下に置いた小規模な王国からは侮辱とみなされているものもある。条項の交渉には予想以上に時間がかかるだろう。"
  ideagroups.1809.a:0 "我々は待つことができる。"
  ideagroups.1810.t:0 "敵対的な誇張"
  ideagroups.1810.d:0 "我々の大使の一人が最近のパーティーの席でいくつかの愚かな発言を行った。我々の隣人たちの怒りと好戦的な非難は、我々が実際よりも大きな脅威として見られていることを示している。"
  ideagroups.1810.a:0 "怯えさせておけ。"
  ideagroups.1810.b:0 "我々はこの行き過ぎをなだめることができる。"
  ideagroups.1900.t:0 "自由主義者は迫害されない"
- ideagroups.1900.d:0 "哲学者、管理者、科学者が政治的あるいは宗教的制約から自由になった知識を追求するという我々の政策は、我々の首都の集会や大学での活動の急増につながっている。"
+ ideagroups.1900.d:0 "哲学者、行政官、科学者が政治や宗教の制約に束縛されずに知識を追求できるようにするという我々の政策は、我々の首都の集会や大学での活動の急増につながっている。"
  ideagroups.1900.a:0 "見事だ！"
  ideagroups.1901.t:0 "すべてを包む公正な法"
- ideagroups.1901.d:0 "真の正義への公約－国家、宗教、または伝統に盲目な人への－は、我々の人々の大部分で普及していることが証明されている。我々の支配に対する不平は大幅に軽減される。"
+ ideagroups.1901.d:0 "国家、宗教、伝統などに囚われることなく真の正義を貫くことは、国民の大部分の層に支持されることが証明されている。我々の支配に対する苦情は大幅に減少している。"
  ideagroups.1901.a:0 "法律は大も小も統治する。"
  ideagroups.1902.t:0 "公正な仲介人"
- ideagroups.1902.d:0 "我々は、国民の利益を尊重し、他者の権利を守る国として、国際的な評価を得ている。我々の国内での公正な取引は、近隣諸国において成功を収めている。"
+ ideagroups.1902.d:0 "我々は、すべての国民の利益を尊重し、他者の権利を守る国として、国際的な評価を得ている。国内での公正な取引は、近隣諸国においても成功を収めている。"
  ideagroups.1902.a:0 "彼らは本当に私が好きだ！"
  ideagroups.1903.t:0 "内閣の協力"
- ideagroups.1903.d:0 "我々の人道主義的政策は、国内の宗教や民族分裂をもはや利用することができないため、顧問の間の嫉妬を軽減した。誰もが国家を信じて働いており、内閣には信頼がある。"
+ ideagroups.1903.d:0 "我々の人道主義的政策により、もはや国内の宗教的・民族的な分裂で弄ぶことができなくなったため、顧問たちの間の嫉妬心が薄れている。誰もが国家を信じて働いており、内閣への信頼がある。"
  ideagroups.1903.a:0 "分かち合うことは助け合うことだ。"
  ideagroups.1904.t:0 "すべてを受け入れるのが進歩への道"
- ideagroups.1904.d:0 "我が国の取るに足らない分裂は、我々の発展を長く遅らせてきた。すべての有能な市民に行政を開放することで、我々は地域経済の発展で大きな成果を上げることに気づいた。"
+ ideagroups.1904.d:0 "国家内の些細な分裂は、我々の発展を長く遅らせてきた。すべての才能ある市民に行政を開放して以来、我々は地域経済の発展で大きな成果を上げていることに気づいた。"
  ideagroups.1904.a:0 "寛容は我々を豊かにすることができる。"
  ideagroups.1905.t:0 "優しい返事は怒りをそらす"
- ideagroups.1905.d:0 "我々の信仰が我々に平和と安全を与えているため、他人を抑圧する必要はない。異端的な信仰の最も深いところにいる人々でさえ、神への全人類の尊敬を奨励する方法を見ることができる。"
+ ideagroups.1905.d:0 "我々の信仰が我々に平和と安全を与えているため、他人を抑圧する必要はない。異端的な信仰の最も暗い深淵にいる人々でさえ、神がいかに全人類へ尊重を奨励しているのかを知ることができる。"
  ideagroups.1905.a:0 "我々は一つの国家であるべきだ。"
  ideagroups.1906.t:0 "世界を照らす光"
- ideagroups.1906.d:0 "我々の信仰が我々に平和と安全を与えているため、他人を抑圧する必要はない。異教の信仰の最も深いところにいる人々でさえ、神への全人類の尊敬を奨励する方法を見ることができる。"
+ ideagroups.1906.d:0 "我々の信仰が我々に平和と安全を与えているため、他人を抑圧する必要はない。異教の信仰の最も暗い深淵にいる人々でさえ、神がいかに全人類へ尊重を奨励しているのかを知ることができる。"
  ideagroups.1906.a:0 "我々は一つの国家であるべきだ。"
  ideagroups.1907.t:0 "手綱は大きく緩んでいる"
- ideagroups.1907.d:0 "新たに征服した敵の自由を尊重した待遇を与えるという努力は、覚醒した「愛国的な」大衆の噴出を招いただけであった。この火の手は最終的には燃え尽きるだろうが、我々は今、その鎮圧を試みることができる。"
+ ideagroups.1907.d:0 "新たに征服した敵国に対し、その自由を尊重して扱おうとする努力は「愛国的な」暴徒の暴発を招いただけであった。この火の手はやがて燃え尽きるだろうが、今のうちに鎮火を試みることもできる。"
  ideagroups.1907.a:0 "言わせておけ。"
  ideagroups.1907.b:0 "軍隊を送れ。"
  ideagroups.1908.t:0 "自由思想家は神から離れることを導く"
- ideagroups.1908.d:0 "寛容に対する評価はすべて順調に行っているが、異端的な説教者は彼らの会衆の魂を危険にさらしている。さらに悪いことに、これらの逸脱者を抑圧しようとすることは、我々の人道主義の理想に反してしまうだろう。"
+ ideagroups.1908.d:0 "意見に対して寛容であることは十分に良いことだが、異端的な説教者は彼らの信徒の魂を危険にさらしている。さらに悪いことに、これらの逸脱者を抑圧しようとすることは、我々の人道主義の理想に反してしまうだろう。"
  ideagroups.1908.a:0 "たぶん、長期的には無害だろう…"
  ideagroups.1908.b:0 "異端のプロパガンダに反抗する。"
  ideagroups.1909.t:0 "無効な宣教活動"
- ideagroups.1909.d:0 "人道主義の公約は、我々の宣教師が非信者を説得することを困難にしていることを意味している。処罰、あるいは公式の優先による報酬がなければ、説教者は個人的なカリスマだけに頼らざるを得ない。"
+ ideagroups.1909.d:0 "人道主義の公約は、我々の宣教師がその信仰へ非信者を勧誘することを困難にしていることを意味している。甘い飴や痛い鞭がなければ、説教者は個人的なカリスマだけに頼らざるを得ない。"
  ideagroups.1909.a:0 "最悪だ。"
  ideagroups.1910.t:0 "過去との戦い、過去の反撃"
- ideagroups.1910.d:0 "国内の市民の地位のさらなる自由な理解への献身は、隣人が我々に王室、教会、ギルドの伝統的権利を損なうことを約束した無法国家の烙印を押したことを示している。我々と同じように考えている者だけを信じることはできるだろうか？"
+ ideagroups.1910.d:0 "国家における市民の位置づけをより自由に捉えようとする姿勢は、近隣諸国から、王室や教会やギルドの伝統的な権利を弱体化させようとする無法国家という烙印を押されたことを意味する。我々と同じように考えている者だけを信じることはできるだろうか？"
  ideagroups.1910.a:0 "前に進もう、たとえ一人でも"
  sermons_for_princes_monarchist:0 "大公のための説教"
- desc_sermons_for_princes_monarchist:0 "[Root.Monarch.Dynasty.GetName]家は我が国の教会の説教と祈祷によって、民衆の意見を強化している。"
+ desc_sermons_for_princes_monarchist:0 "[Root.Monarch.Dynasty.GetName]家は我が国教会の説教や祈祷に参加しており、民衆の評価が高まっている。"
  act_of_seclusion_monarchists:0 "排除令"
- desc_act_of_seclusion_monarchists:0 "議会派は、[Root.GetName]の君主派を弱める外国の権力と行動について交渉してきた。"
+ desc_act_of_seclusion_monarchists:0 "議会派は、[Root.GetName]の君主派を弱体化させる行為について外国勢力と交渉してきた。"
  distrust_among_nobles_monarchists:0 "貴族たちの不信"
  desc_distrust_among_nobles_monarchists:0 "統治者が[Root.Monarch.Dynasty.GetName]家に反対したことで、一部の国軍の指揮官は国家の指導力に不信を抱くようになった。"
  monarchists_rally_against_rival:0 "ライバルに対する君主派貴族の結束"
- desc_monarchists_rally_against_rival:0 "[Root.GetName]公は、憎むべきライバルとの戦いで指導力を発揮し、この崇高な主張の背後で貴族たちを結集させた。"
+ desc_monarchists_rally_against_rival:0 "[Root.GetName]公は、憎むべきライバルとの戦いで指導力を発揮し、この崇高な大義の下に貴族たちを結集させた。"
  dutch_republic.2.t:1 "[Root.GovernmentName]の政治的格言"
  dutch_republic.2.da:0 "[Root.GetName]の最も尊敬される顧問の一人である、$STATESMAN$$DIPLOMAT$$TRADER$$COLONIAL_GOVERNOR$は、最近、共和国政府の形態に依存する政治的原則について議論する研究を発表した。確かによく書かれており、説得力を持って議論されているが、資料のいくつかでは、オラニエ公が[Root.Monarch.GetTitle]の官職に最近保持している支配権を強く批判している。顧問の[Root.Monarch.GetName]に対する忠誠心は、我々が思っていたほど確固としたものではないかもしれない。"
  dutch_republic.2.db:0 "[Root.GetName]の最も尊敬される顧問の一人である、$STATESMAN$$DIPLOMAT$$TRADER$$COLONIAL_GOVERNOR$は、最近、連合政府の形態に依存する政治的原則について議論する研究を発表した。確かによく書かれており、説得力を持って議論されているが、資料のいくつかでは、[Root.GetName]公が[Root.Monarch.GetTitle]の官職に最近保持している支配権を強く批判している。顧問の[Root.Monarch.GetName]に対する忠誠心は、我々が思っていたほど確固としたものではないかもしれない。"
