--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -960,7 +960,7 @@
  EVTOPTA1074:0 "国家債務の資金調達のための計画を実施せよ。"
  EVTOPTB1074:0 "税制改革を実施せよ。"
  EVTNAME1075:0 "繁栄の時代"
- EVTDESC1075:0 "$MONARCH$は、我が国の芸術的業績と開花した経済で有名になっている。芸術家、哲学者、詩人は$CAPITAL$に集まり、繁栄している経済が広範な芸術的資金を提供している。いくつかの優れた建築様式の建築物が建てられており、国の富を示すために美しい庭園が建設され、新しい知的エリートの多くの構成員が、国の様々な部分を改善する方法についてのアイデアを持っている。"
+ EVTDESC1075:0 "$MONARCH$は、我が国の芸術的功績と経済的繁栄で有名になった。芸術家、哲学者、詩人が$CAPITAL$に集まり、経済の繁栄により芸術に多額の資金が投入されている。我が国の豊かさを示すように、いくつもの優れた建築様式の建築物が建てられ、美しい庭園が建設されており、新しい知的エリートの多くの者が、自国の様々な部分を改善する方法についてのアイデアを持っている。"
  EVTOPTA1075:0 "都市基盤により一層の投資をする。"
  EVTOPTB1075:0 "農村基盤により一層の投資をする。"
  EVTOPTC1075:0 "生産方式により一層の投資をする。"
