Extract files from game [ci skip]

--- a/extract/localisation/cossacks_l_english.yml
+++ b/extract/localisation/cossacks_l_english.yml
@@ -52,7 +52,7 @@
  estate_bushi:0 "Bushi"
  estate_warriors:0 "Warriors"
  estate_mani:0 "Mani"
- estate_pochteca:0 "Pochtecas"
+ estate_pochteca:1 "Pochteca"
  horde_unity:0 "Horde Unity"
  CALL_DIET:0 "Call Diet"
  ASK_FOR_CONTRIBUTION:0 "Ask for Contribution"
