--- a/extract/localisation/gecko_1_35_l_english.yml
+++ b/extract/localisation/gecko_1_35_l_english.yml
@@ -23,7 +23,7 @@
  CHANNEL_music_065_music:0 "Fredman's Epistles"
  CHANNEL_music_064_music:0 "Fredman's Epistles"
  CHANNEL_music_therusawaken:0 "The Rus Awaken"
- CHANNEL_music_ottomantunes:0 "Kairi's Soundtrack III - Ottoman Tunes"
+ CHANNEL_music_ottomantunes:1 "Kairi's Ottoman Tunes"
  CHANNEL_music_rulebritannia:0 "Rule Britannia Music"
  CHANNEL_music_dharmamusic:0 "Dharma Music"
  CHANNEL_music_goldencenturymusic:0 "Golden Century Music"
@@ -46,7 +46,7 @@
  LESSON_ENTRY_TOOLTIP_DATE:0 "Changes date to $DATE|Y$"
  LESSON_ENTRY_TOOLTIP_TAG:0 "Selects $TAG|Y$"
  LESSON_ENTRY_TOOLTIP_FOOTER:0 "§GClick to play§!"
- CHANNEL_music_caucasianmusic: "Caucasian Music"
- CHANNEL_music_egyptianmusic: "Egyptian Music"
- CHANNEL_music_persianmusic: "Persian Music"
- CHANNEL_music_utopiahre: "Holy Roman Empire Music"
+ CHANNEL_music_caucasianmusic:0 "Caucasian Music"
+ CHANNEL_music_egyptianmusic:0 "Egyptian Music"
+ CHANNEL_music_persianmusic:0 "Persian Music"
+ CHANNEL_music_utopiahre:0 "Holy Roman Empire Music"
