--- a/extract/localisation/golden_century_l_english.yml
+++ b/extract/localisation/golden_century_l_english.yml
@@ -165,7 +165,7 @@
  FLAGSHIP_BUILD:0 "Build"
  HAS_FLAGSHIP:0 "Country has a Flagship"
  HAS_NOT_FLAGSHIP:0 "Country does not have a Flagship"
- MODIFIER_TRADE_COMPANY_INVESTMENT_COST:0 "Trade Company Investment cost"
+ MODIFIER_TRADE_COMPANY_INVESTMENT_COST:0 "Trade Company Investment Cost"
  RECENT_TREASURE_SHIP_PASSAGE:0 "Treasure ship recently passed through Trade Node."
  NO_RECENT_TREASURE_SHIP_PASSAGE:0 "No treasure ship recently passed through Trade Node."
  ANY_NATIVE_POLICY_SET:0 "Any Native Policy has been set."
