--- a/extract/localisation/hedgehog_l_english.yml
+++ b/extract/localisation/hedgehog_l_english.yml
@@ -146,6 +146,12 @@
  desc_ancestor_navigator_personality:0 ""
  ancestor_fierce_negotiator_personality:0 "Fierce Negotiator"
  desc_ancestor_fierce_negotiator_personality:0 ""
+ ancestor_legendary_pirate_personality:0 "Legendary Pirate"
+ desc_ancestor_legendary_pirate_personality:0 ""
+ ancestor_humane_personality:0 "Humane"
+ desc_ancestor_humane_personality:0 ""
+ ancestor_merchant_basileus_personality:0 "Merchant Basileus"
+ desc_ancestor_merchant_basileus_personality:0 ""
  MIGRATION_BASE_COST:0 "Base: §Y50§!\n"
  MIGRATION_MULTIPLIER:0 "Outside Tribal Land: §Yx§!$MULT|Y$\n"
  MIGRATION_MODIFIER:0 "This is further modified by:\n$MOD$"
