--- a/extract/localisation/hnn_l_english.yml
+++ b/extract/localisation/hnn_l_english.yml
@@ -60,6 +60,6 @@
  life_under_the_shadow_kingdom:0 "Life under the Shadow Kingdom"
  election_of_a_habsburg:0 "Election of a Habsburg"
  autumn_in_aachen:0 "Autumn in Aachen"
- ninety-five_theses:0 "Ninety-five Theses"
+ ninety_five_theses:0 "Ninety-five Theses"
  imperial_diet:0 "Imperial Diet"
  charlemange_s_legacy:0 "Charlemagne's Legacy"
