--- a/extract/localisation/scandinavia_l_english.yml
+++ b/extract/localisation/scandinavia_l_english.yml
@@ -153,7 +153,7 @@
  ADD_STAT_OR_POWER_adm:0 "Excess Points over §Y6§! £adm£ will be converted into §G100§! Administrative Power."
  ADD_STAT_OR_POWER_dip:0 "Excess Points over §Y6§! £dip£ will be converted into §G100§! Diplomatic Power."
  ADD_STAT_OR_POWER_mil:0 "Excess Points over §Y6§! £mil£ will be converted into §G100§! Military Power."
- ADD_ACCEPTED_CULTURE_TT:1 "If the §YCulture§! is already an §YAccepted Culture§! gain §G100§! Diplomatic Power instead."
+ ADD_ACCEPTED_CULTURE_TT:2 "If the §YCulture§! is already an §YAccepted Culture§! gain §G$POINTS$§! Diplomatic Power instead."
  ADD_ACCEPTED_CULTURE_SLOT_LIMITATION_TT:0 "If the §YCulture§! is already an §YAccepted Culture§!, or if there are not enough §YSlots§!, gain §G100§! Diplomatic Power instead."
  CULTURE_WILL_NOT_TAKE_SLOT_UNTIL_DEMOTED_TT:0 "Gain §G+1§! Max Promoted Culture until this §YCulture§! is demoted."
  crusader_can_always_reform_jerusalem:0 "Allow the formation of §YJerusalem§! outside of the Age of Discovery and the Age of Reformation."
@@ -707,7 +707,7 @@
  take_capital_norwegian_throne:0 "Take the capital"
  take_capital_norwegian_throne_desc:0 "War goal is to take the capital."
  NORWEGIAN_THRONE_WAR_NAME:0 "$ORDER$$FIRST$-$SECOND$ War for the Norwegian Throne"
- cb_imperial_ban_incident:0 "Imperial Ban"
+ cb_imperial_ban_incident:1 "Imperial Campaign"
  cb_imperial_ban_incident_desc:0 "They hold Imperial provinces."
  take_capital_ban:0 "Take the capital"
  take_capital_ban_desc:0 "War goal is to take the capital."
