Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1205,7 +1205,7 @@
  HAS_NO_TRADER_IS_NODE:0 "§Y$WHO$§!は§Y$NAME$§!に商人を持っていない\n"
  HAS_TRADER_IS_NODE:1 "§Y$WHO$§!が§Y$NAME$§!に商人を持っている\n"
  ACTUALPOWER_MODIFIER:0 "$VAL$に補正。\n"
- RELIGION_CHANGE:1 "§Y$NEW$§Wが新しい$WHO$の国教となります。\nこれはまた我々の統治者と可能性のある後継者に適用されます。\n"
+ RELIGION_CHANGE:2 "§Y$NEW$§Wが新しい$WHO$の国教となります。\nこれは同時に統治者と可能性のある後継者にも適用されます。\n"
  JOIN_LEAGUE:0 "$WHO$は§Y$RELIGION$連盟に参加します§!。\n"
  LEAVE_LEAGUE:0 "$WHO$は§Y$RELIGION$連盟を離脱します§!。\n"
  WEXTITLE:0 "戦争疲弊"
@@ -1829,8 +1829,8 @@
  CV_ABANDON_IDEA_GROUP_DIALOG_TITLE:0 "アイデアグループ$NAME$の放棄の確認"
  CV_UNLOCK_IDEA_DIALOG_DESC:0 "§Y$NAME$§!のアイデアを解除するために$TYPE$を§Y$POWER_COST$§!消費します。\n"
  INTI_REFORM_TOOLTIP:0 "§Y$NAME$§!を獲得しますか？獲得により権威が§Y100§!低下、安定度が§R2§!低下し、内戦に突入します。"
- NAHUATL_REFORM_TOOLTIP:0 "§Y$NAME$§!を獲得しますか？獲得により破滅が§R25§!上昇し、すべての従属国が解放され、あなたの安定度が§R1§!低下します。"
- MESOAMERICAN_REFORM_TOOLTIP:0 "§Y$NAME$§!を獲得しますか？獲得により征服したすべての国家とあなたの州のいくつかを解放し、あなたの安定度が§R1§!低下します。"
+ NAHUATL_REFORM_TOOLTIP:1 "本当に§Y$NAME$§!を解禁しますか？解禁すると破滅が§R50§!上昇し、不忠な従属国がすべて解放され、従属国の独立欲求が§R40％§!増加し、自国の安定度が§R1§!低下します。"
+ MESOAMERICAN_REFORM_TOOLTIP:1 "§Y$NAME$§!を獲得しますか？獲得により征服したすべての国家とあなたの州のいくつかを解放し、あなたの安定度が§R2§!低下します。"
  CV_UNLOCK_IDEAGROUP_DIALOG_TITLE:0 "アイデアグループ$NAME$の獲得の確認"
  CV_UNLOCK_IDEAGROUP_DIALOG_DESC:0 "アイデアグループ$NAME$を獲得するためにスロットを使用します"
  CV_ABANDON_IDEA_GROUP_DESC:1 "アイデアグループ内すべての実効中のアイデアを削除し、アイデアに必要な基礎君主点の$PERCENTAGE$のみ返還されます。\n\n　このアイデアグループの放棄で$POWER$§Y$VALUE$§!が返還されます。\n\n§Y$NAME$§!を削除してよろしいですか？"
@@ -3352,7 +3352,7 @@
  alert_can_call_allies_instant:0 "§Y同盟国に参戦要請可能！§!"
  alert_can_call_allies_delayed:0 "以下の同盟国はあなたの戦争に喜んで参戦するでしょう：\n"
  alert_unlawful_territory_instant:0 "§Y不法な領土！§!"
- alert_unlawful_territory_delayed:0 "不法な領土$LIST$を帝国に返還するよう求めることができます。"
+ alert_unlawful_territory_delayed:0 "$LIST$が持つ不法な領土を帝国に返還するよう求めることができます。"
  REVOKE_ELECTOR:0 "$WHO$は選帝侯の地位を失います。"
  REVOKE_ELECTOR_TITLE:0 "選帝侯位を剥奪する"
  CB_ALLOWED_ELECTOR_REVOKE:0 "選帝侯の剥奪"
@@ -4578,7 +4578,7 @@
  CV_SUB_DEV_TOTAL_INFO:0 "彼らの州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n$WHO$は$PROVS|Y$州を持ち、うち$HOME|Y$州が非海外の中核州です。"
  AUTHORITY_FROM_DEV:0 "$ADJ$の開発から：$VAL$"
  DOOM_FROM_PROVINCES:0 "領有している州の数：$VAL$"
- DOOM_FROM_REFORMS:0 "\n宗教改革の数：$VAL$"
+ DOOM_FROM_REFORMS:1 "宗教改革の数：$VAL$"
  AUTHORITY_TOOLTIP_INSTANT:0 "次の要因により権威が年間$CHANGE$変化します：\n"
  AUTHORITY_TOOLTIP_EFFECTS:0 "§Y現在の権威からの効果：§!\n"
  AUTHORITY_TOOLTIP_DESC:0 "権威は、$MONARCHTITLE$の宗教的な力と名声の目安です。権威が§Y100§!に到達すると、我々は宗教改革を制定することができるようになります。権威は多くの州を所有することによって増加し、州に自治を与えた場合に減少します。"
@@ -4915,8 +4915,8 @@
  STATISTS_IN_POWER:1 "$NAME$が権力を握っている"
  MONARCHISTS_NOT_IN_POWER:0 "$NAME$が権力を握っていない"
  MONARCHISTS_IN_POWER:0 "$NAME$が権力を握っている"
- STATIST_VS_MONARCHISTS_LESS_THAN:0 "$STATISTS$ vs $MONARCHISTS$が$VAL$未満"
- STATIST_VS_MONARCHISTS_AT_LEAST:0 "$STATISTS$ vs $MONARCHISTS$が$VAL$以上"
+ STATIST_VS_MONARCHISTS_LESS_THAN:1 "$STATISTS$ vs $MONARCHISTS$が$VAL|0Y$未満"
+ STATIST_VS_MONARCHISTS_AT_LEAST:1 "$STATISTS$ vs $MONARCHISTS$が$VAL|0Y$以上"
  STRENG_STATISTS_EFFECT:1 "$NAME$を$VAL|Y%$強化する"
  STRENG_MONARCHISTS_EFFECT:0 "$NAME$を$VAL|Y%$強化する"
  STATISTS_IRO:1 "$NAME|Y$\n"
@@ -5039,8 +5039,6 @@
  COLONIAL_EASTERN_AMERICA_Miju_ADJ:0 "美州"
  COLONIAL_AUSTRALIA_Hoju:0 "濠州"
  COLONIAL_AUSTRALIA_Hoju_ADJ:0 "濠州"
- plc_polish_lithuanian_union:0 "ポーランド・リトアニア連合"
- desc_plc_polish_lithuanian_union:1 "[Root.GetName]の結成により、ポーランドとリトアニアの文化は我が国においてともに対等なものとして扱われる。\n\n§Yこの補正はどちらかの文化が受容文化から降格された場合に削除されます。§!"
  ab_manchu_banner_tt:0 "満州八旗が有効な場合、雇える八旗が§G+50%§!されます"
  MODIFIER_CAN_TRANSFER_VASSAL_WARGOAL:1 "「§Y従属国の移譲§!」の和平協定のコストが半分になります"
  MODIFIER_CAN_CHAIN_CLAIM:0 "請求権のある州に隣接する州への請求を可能にします"
