--- a/source/localisation/branching_mission_system_l_english.yml
+++ b/source/localisation/branching_mission_system_l_english.yml
@@ -103,3 +103,21 @@
  JAP_preview_a_kirishitan_realm:0 "「§Oキリスト教ルート§!」ミッションツリーをプレビュー表示します。"
  BYZ_preview_decentralized:1 "「§O分権化ルート§!」ミッションツリーをプレビュー表示します。"
  BYZ_preview_centralized:1 "「§O集権化ルート§!」ミッションツリーをプレビュー表示します。"
+ hab_hre_branch:0 "神聖ローマ帝国ルート"
+ hab_germany_branch:0 "ドイツルート"
+ boh_catholic_missions:0 "カトリックルート"
+ boh_hussite_missions:0 "フス派ルート"
+ hsn_anatolian_conquest_missions:0 "アナトリア征服ルート"
+ hsn_anatolian_alliance_missions:0 "アナトリア外交ルート"
+ hsn_persian_conquest_missions:0 "ペルシア征服ルート"
+ hsn_persian_alliance_missions:0 "ペルシア外交ルート"
+ feo_russian_conquest_branch:0 "ロシア征服ルート"
+ feo_russian_alliance_branch:0 "ロシア外交ルート"
+ TIM_persian_missions:0 "ペルシアルート"
+ TIM_nomad_missions:0 "遊牧民ルート"
+ ven_standing_army_missions:0 "常備軍ルート"
+ ven_mercenary_army_missions:0 "傭兵ルート"
+ ven_navy_missions:0 "海軍ルート"
+ hordes_tolerance_branch_flag:0 "寛容ルート"
+ hordes_devout_branch_flag:0 "敬虔ルート"
+ hordes_confucian_branch_flag:0 "儒教ルート"
