--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1661,7 +1661,7 @@
  marry_strong_ally_tt:0 "我々は§Y[bur_strongest_ally.GetName]§!の下で§Y同君連合§!に入ります。"
  marry_french_tt:0 "我々は§Y[FRA.GetName]§!の下で§Y同君連合§!に入ります。"
  bur_france_gets_france_tt:0 "§Yフランス地方§!において§Yブルゴーニュ§!が領有する§Y全ての州§!は§Y[FRA.GetName]§!に割譲されます。"
- release_imperial_tt:1 "神聖ローマ帝国内で§Yブルゴーニュ§!が領有する§Y全ての州§!は§Y神聖ローマ帝国諸侯§!として§Y解放§!されます。"
+ release_imperial_tt:2 "§Yブルゴーニュ§!が領有する州のうち、§Yオランダ§!、§Yフラマン§!、§Yフリジア§!文化のいずれかである、または§Y神聖ローマ帝国§!内の州は、§Y神聖ローマ帝国諸侯§!として§Y解放§!されます。"
  demand_lowlands_tt:0 "§Y低地地方§!を§Y神聖ローマ帝国諸侯§!として解放するよう要求します。"
  east_frisia_empire_tt:0 "§Y東フリースラント§!は神聖ローマ帝国の一部となります\n政体は§Y君主制§!に変更されます。"
  become_helvetic_tt:0 "§Yスイス§!は§Y革命共和国§!になります。"
@@ -1945,7 +1945,7 @@
  mercs.8.a:0 "彼は名簿への素晴らしい追加になる。"
  mercs.8.b:0 "ありがとう、だが遠慮しておくよ。"
  mercs.9.t:0 "戦争は変わった"
- mercs.9.d:0 "銃器の広範な使用が進んだことは、ヨーロッパにおける戦争の様相を根本的に変えた。近代的な武器で武装し、近代的な戦術を採用している多くの新しい傭兵団が設立された一方で、この洗練された戦争の新時代に適応できず、その存在感を失ってしまった傭兵団もある。"
+ mercs.9.d:0 "銃器の普及が進んだことで、ヨーロッパにおける戦争は根本的に様変わりした。近代的な武器で武装し、近代的な戦術を採用している新しい傭兵団が多く設立された一方で、この洗練された戦いの新時代に適応できず、存在感を失ってしまった傭兵団もある。"
  mercs.9.a:0 "得るは捨つるにあり。"
  new_mercs_europe_tt:0 "§Yヘッセン猟兵団が雇用可能になります§!\n§Yスコットランド衛兵が雇用可能になります§!\n§Yセイメニが雇用可能になります§!\n§Y黒衛団はもはや雇用できません§!\n§Yバンデ・ネーレはもはや雇用できません§!\n§Yギャローグラスはもはや雇用できません§!\n§Yレッドシャンクはもはや雇用できません§!"
  mercs.10.t:0 "傭兵の熱意"
@@ -3327,3 +3327,4 @@
  LORD_ADMIRAL:0 "海軍卿"
  LORD_ADMIRAL_fem:0 "海軍卿"
  desc_mary_is_on_the_throne:0 "彼女の馬が事故を起こさなくなる。"
+ incidents_bur_inheritance.3.b.tt:0 "戦争は§Y10§!日後に開始します。"
