--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -549,7 +549,7 @@
  emp_hun_duchy_of_austria_title:0 "オーストリア公国"
  emp_hun_duchy_of_austria_desc:0 "ウィーンは、[Root.GovernmentName]へのすばらしい追加となるだろう。我々はそれを自身で獲得するべきだ。"
  emp_hun_bulwark_of_christianity_title:0 "キリスト教の防波堤"
- emp_hun_bulwark_of_christianity_desc:0 "オスマン帝国の脅威に対するキリスト教世界の主要な擁護者であることで、我々はキリスト教の防波堤として知られるようになった。異教徒が我々に投げかけるあらゆるものと一致する我々の能力を示すことにより、我々はこの称号に完全に値するものであることを保証できる"
+ emp_hun_bulwark_of_christianity_desc:0 "オスマン帝国の脅威に対するキリスト教世界の主要な擁護者であることで、我々はキリスト教の防波堤として知られるようになった。異教徒が我々に投げかけるあらゆるものと一致する我々の能力を示すことにより、我々はこの称号に完全に値するものであることを保証できる。"
  emp_hun_bulwark_of_christianity_trigger_tooltip:2 "下記の国家が存在しない：\n　以下の全てが満たされている：\n　　§Yムスリム§!である。\n　　以下のいずれかが満たされている：\n　　　§Yレヴァント§!文化グループである。\n　　　§Y[Root.GetName]§!の隣国である。\n　　　首都が§Yヨーロッパ§!にある\n　　§Y[Root.GetName]§!より大きな陸軍を持っている。"
  hun_funded_paulines:0 "聖パウロス修道会の信用"
  desc_hun_funded_paulines:0 "最初の隠修士聖パウロス修道会は、我々の資金提供を通じてその勢力を拡大していった。したがって、この修道会のハンガリー国家への信用は増大している。"
@@ -893,7 +893,7 @@
  ned_sea_beggar_activity:0 "海の乞食団の活動"
  desc_ned_sea_beggar_activity:0 "我々の小型船は、敵の交易を混乱させ、我々自身の独立した交易力を育てるのに優れている。"
  ned_west_indies_charter:0 "西インド諸島勅許"
- desc_ned_west_indies_charter:0 "海外交易の成長は新しい富の源に機会をもたらしている。"
+ desc_ned_west_indies_charter:1 "海外交易の成長は新しい富の源に機会をもたらしている。"
  ned_distributed_tax_burden:0 "税負担の分配"
  desc_ned_distributed_tax_burden:0 "すべての州が同意できる課税制度は、あらゆる権力が同じ力で税金を徴収することを保証するのに役立つ。"
  ned_dutch_overseas_trade:0 "オランダの海外交易"
@@ -1067,7 +1067,7 @@
  emp_ita_humiliate_austria_title:0 "オーストリアに屈辱を"
  emp_ita_humiliate_austria_desc:0 "オーストリアは長い間我々の悩みの種であり、彼らが我々よりも優れていると偽り続けている。彼らは「ローマ人」の皇帝を宣言するという目標さえ持っていた！我々がいい加減に扱うべき存在ではないことを彼らに示す時だ。"
  emp_ita_a_real_roman_empire_title:0 "真のローマ帝国"
- emp_ita_a_real_roman_empire_desc:0 "我々の領土は地図全体へと広がっており、競争相手たちはずいぶんと謙虚になっている。我々がローマの偉大さの真の唯一の継承者であることを認める時が来た。"
+ emp_ita_a_real_roman_empire_desc:0 "我々の領土は地図全体へと広がっており、競争相手は圧倒されている。我々がローマの偉大さの真の唯一の継承者であることを認める時が来た。"
  emp_ita_spagna_tarraconense_title:0 "スパーニャ・タラコネンシス"
  emp_ita_spagna_tarraconense_desc:0 "スペインのような侵入者がいる限り、我々の地中海の支配は完全なものではない。我々はイベリア東部沿岸に沿って我々の力を主張し、スペインが我らの海を侵害するのを止めなければならない。"
  emp_ita_hispaniae_title:0 "イスパニア"
@@ -1086,8 +1086,8 @@
  emp_ita_anatolian_frontier_desc:0 "トルコがアナトリアで我々を脅かし続けている限り、我々の東部の支配は安全ではない。我々の領域を脅かすであろう者を征服するために、小アジアに新たな国境を作り上げなければならない。"
  emp_ita_a_worthy_navy_title:0 "立派な海軍"
  emp_ita_a_worthy_navy_desc:0 "イタリアは広大な海と他の多くの海軍に囲まれた大きな半島である。我々自身の立派な艦隊がなければ、我々は海軍の封鎖と侵略に対して無防備になるだろう。我々は領土と栄光を守るために艦隊を構築しなければならない。"
- emp_ita_africa_proconsulare_title:0 "アフリカ前執政官"
- emp_ita_africa_proconsulare_desc:0 "地中海での我々の支配は、バルバリア海賊や北アフリカからの他のならず者たちの脅威にさらされている。我々の土地を投影したい場合、海賊の隠れ家とそれらを保護する北アフリカの政権を破壊しなければならない。"
+ emp_ita_africa_proconsulare_title:1 "アフリカ属州"
+ emp_ita_africa_proconsulare_desc:0 "地中海での我々の支配は、バルバリア海賊や北アフリカからの他のならず者たちの脅威にさらされている。我々の土地を守りたい場合、海賊の隠れ家とそれらを保護する北アフリカの政権を破壊しなければならない。"
  emp_ita_befriend_ethiopia_title:0 "エチオピアと誼を結べ"
  emp_ita_befriend_ethiopia_desc:0 "古代の伝説では、異教の領域の向こうに暮らすキリスト教徒の王、プレスター・ジョンの王国について語っている。そこから、我々はさらに学んだ。マルコ・ポーロ自身がエチオピアの偉大なキリスト教の王国について話し、そのアフリカの土地と我々との接触はそれ以来増加している。エチオピアの人々に手を差し伸べ、友情と相互保護の絆を築くことは、後世の利益と我々の戦略的利益へと繋がる。"
  emp_ita_befriend_ethiopia_capital_tt:0 "首都が§Yアフリカの角§!地方にある"
@@ -1161,7 +1161,7 @@
  emp_ven_challenge_papal_supremacy_desc:0 "我々は長い間、教皇と一定の理解を維持してきた。教皇は我々の教会の問題に干渉せず、我々は教皇の問題に干渉しなかった。しかし、最近、我々自身の力が高まるにつれて、教皇はより積極的になり、ヨーロッパ中の教会問題に関与し始めた。我々は教皇に我々の古い取り決めを思い出させ、そして教皇庁の権力の掌握を確認する時だ。"
  emp_ven_monopolize_adriatic_trade_title:0 "アドリア交易の独占"
  emp_ven_monopolize_adriatic_trade_desc:0 "ヴェネツィアはアドリア海全体の交易を支配するべきであり、それは我々を新興都市のラグーザと衝突させている。"
- emp_ven_reclaim_the_aegean_title:0 "エーゲ海への奪還"
+ emp_ven_reclaim_the_aegean_title:0 "エーゲ海の奪還"
  emp_ven_reclaim_the_aegean_desc:0 "我々は東地中海での交易の長い歴史を持っているが、運命がギリシャと小アジアで揺れ動いたことで、商人の運命は苦しむことになった。エーゲ海での立場を再表明するには武力が必要だが、成功すれば我々は繁栄するだろう。"
  emp_ven_annex_cyprus_title:0 "キプロスの併合"
  emp_ven_annex_cyprus_desc:0 "キプロスは東地中海という王冠の宝石である。キプロスから、我々はレヴァント、アナトリア、さらにはエジプトまで、海洋交易における壮大な支配権を行使することができた！しかし、まず、我々は島を獲得する必要がある。"
@@ -1641,7 +1641,7 @@
  emp_boh_great_moravia_title:0 "ニトラの征服"
  emp_boh_great_moravia_desc:0 "ボヘミアの前身である大モラヴィア王国は、かつてはチェコの領土をはるかに超えていた。我々は古いニトラ公国の併合から始め、再び国境の拡大を模索する必要がある。"
  emp_boh_hungarian_union_title:0 "ハンガリー同君連合"
- emp_boh_hungarian_union_desc:0 "ハンガリーとボヘミアは、かつては1人の王の下で統一されていたが、寛大なアルベルトの死により1439年に二つに分かれた。我々はこの正当な国家を回復すべきである。"
+ emp_boh_hungarian_union_desc:0 "ハンガリーとボヘミアは、かつては1人の王の下で統一されていたが、アルベルト寛大王の死により1439年に二つに分かれた。我々はこの正当な国家を回復すべきである。"
  emp_boh_protect_against_turks_title:0 "トルコからの防衛"
  emp_boh_protect_against_turks_desc:0 "オスマントルコは、キリスト教世界を巻き込む脅威となる、領土征服の危険な騒ぎに着手している。我々は避けられないであろうトルコの猛攻撃に対し、国境を確実に守らなければならない。"
  emp_boh_revenge_for_nicopolis_title:0 "ニコポリスの復讐"
@@ -1854,7 +1854,7 @@
  emp_mission_events.5.t:0 "教皇による戴冠"
  emp_mission_events.5.d:0 "我々は、キリストの牧師である教皇[PAP.Monarch.GetName]との最終的かつ恒久的な合意に達した。この日から、教皇聖下は個人的に神聖ローマ皇帝を戴冠するだろう。\n帝国の領土内では皇帝が教会に対して事実上優勢であり、教皇と皇帝の間で何世紀にもわたってしばしば行われた激しい紛争に終わりをもたらすという合意にも達した。"
  emp_mission_events.5.a:0 "我々こそ真のローマ帝国だ。"
- EST_VAL_GER_URBAN:0 "ドイツの都市化: §G$VAL$%§!"
+ EST_VAL_GER_URBAN:1 "ドイツの都市化: §G$VAL$§!"
  industrialized_rhineland:0 "ラインラントの工業化"
  desc_industrialized_rhineland:0 "我々のラインラントへの投資は急速な工業化を引き起こしている。"
  ger_german_education:0 "ドイツの教育"
@@ -1989,7 +1989,7 @@
  french_minors_become_france_title:0 "王位の簒奪"
  french_minors_become_france_desc:1 "[Root.Monarch.GetName]が[Root.Monarch.GetHerHim]自身のためにフランス王位を奪取する時が来た。旧政権は新体制に道を開くため、完全に破壊されなければならない。"
  own_all_cores_fra_minors:0 "§Y[Root.GetAdjective]§!の中核州をすべて領有する。"
- EST_VAL_GERMAN_JUNKERS:0 "忠実なユンカー: §G$VAL$%§!"
+ EST_VAL_GERMAN_JUNKERS:1 "忠実なユンカー: "
  guardians_of_the_fountain:0 "泉の守護者"
  desc_guardians_of_the_fountain:0 "我々は主から、若返りの泉を価値のない魂から守るように命じられた。このため、我々は水を飲んで我々の命を守り、長年の奉仕を続けている。"
  swi_empire_tt:0 "帝国事件「スイスと帝国」がある"
@@ -2059,7 +2059,7 @@
  desc_fla_prosperous_burghers:0 "我々の商人はうまくやっており、彼らはそれを誰に感謝すべきかを理解している。"
  fla_european_agents_mod:0 "ヨーロッパの仲介者"
  desc_fla_european_agents_mod:0 "我々の国民たちは大陸全体に注意深く配置されて、静かに我々の商業的利益を維持し、我々の交易は繁栄を続けている。あるいは、いつの日か我々は蓄積したヨーロッパの知識を利用し、より平和的なものを作ることができるかもしれないが、それはまだ今日明日という話ではない。"
- emp_ita_develop_the_south_tt2:0 "§Y南イタリア§!の領有州はすべて、§Y「南への注力」§!を§Y20§!年間獲得し、以下の効果を得ます：\n州の不穏度：§G-2.00§!\n州の税補正：§G+10.0%§!"
+ emp_ita_develop_the_south_tt2:1 "§Yナポリ§!、§Yシチリア東部§!、§Yシチリア西部§!、§Yカラブリア§!および§Yアプリア§!地域の全領有州："
  swa_expand_a_bit_title:0 "シュヴァーベンの支配"
  swa_expand_a_bit_desc:1 "シュヴァーベンには多数の君主、司教、共和国があり、それぞれが自身のちっぽけな領土を支配している。我々はドイツの一部において支配的な勢力となるため、十分な地方を統一しなければならない。"
  swa_swabian_league_mission_title:0 "シュヴァーベン同盟"
