--- a/source/localisation/hedgehog_l_english.yml
+++ b/source/localisation/hedgehog_l_english.yml
@@ -159,3 +159,9 @@
  desc_ancestor_martial_educator_personality:0 ""
  desc_ancestor_navigator_personality:0 ""
  desc_ancestor_fierce_negotiator_personality:0 ""
+ ancestor_legendary_pirate_personality:0 "伝説の海賊"
+ desc_ancestor_legendary_pirate_personality:0 ""
+ ancestor_humane_personality:0 "慈悲深い"
+ desc_ancestor_humane_personality:0 ""
+ ancestor_merchant_basileus_personality:0 "バシレウスの商人"
+ desc_ancestor_merchant_basileus_personality:0 ""
