--- a/source/localisation/achievement_tooltips_l_english.yml
+++ b/source/localisation/achievement_tooltips_l_english.yml
@@ -62,3 +62,6 @@
  has_celebrated_festival_tooltip:0 "祝祭を執り行う。"
  achievement_the_freest_man_in_the_world_tooltip:0 "世界中のどの植民地化された州も§Y奴隷§!を生産していない。"
  achievement_mehmet_ambition_tooltip:0 "§Y[Root.GetName]§!またはその§Y中核エヤレト§!従属国が領有している。"
+ completed_incan_missions:0 "インカミッションツリーを達成する（日沈む地からの侵略ミッションも含む）"
+ achievement_baborg_tooltip:0 "§Y12§!以上の文化グループを同化する。（§Y[Root.GetNumAssimilatedCultureGroups]§!/§Y12§!）"
+ achievement_the_hungarian_games_tooltip:0 "§Y黒軍§!もしくは§Y黒軍予備隊§!の傭兵団で、§Y12§!以上の異なる国家との戦闘に§Y23§!回勝利する。（§Y[Root.GetBlackArmyBattleVictories]§!/§Y23§!）"
