--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -460,7 +460,7 @@
  NEW_ACHIEVEMENT_12_20_NAME:0 "英雄の歓迎"
  NEW_ACHIEVEMENT_12_20_DESC:0 "カラマンで開始し、ルーム・セルジューク朝を形成する。"
  NEW_ACHIEVEMENT_12_21_NAME:0 "ダヴィド建設王"
- NEW_ACHIEVEMENT_12_21_DESC:0 "グルジアで、全領有州に建築可能な建築スロットを持たない。"
+ NEW_ACHIEVEMENT_12_21_DESC:1 "グルジアで、全領有州に建築可能な建築スロットを持たない。"
  NEW_ACHIEVEMENT_12_22_NAME:0 "ヴォルテールの悪夢"
  NEW_ACHIEVEMENT_12_22_DESC:1 "神聖ローマ帝国に100ヶ国以上所属する。"
  NEW_ACHIEVEMENT_12_24_NAME:0 "パーンディヤ帝国"
@@ -725,3 +725,23 @@
  NEW_ACHIEVEMENT_113_DESC:1 "グルジアで、ジェノヴァ、アラゴン、イングランド、トリーアまたはその後継者を従属させ、ウェールズを占領以上の状態とする。"
  NEW_ACHIEVEMENT_114_NAME:0 "ゾロオーストリア"
  NEW_ACHIEVEMENT_114_DESC:0 "オーストリアで開始し、ゾロアスター教に改宗し、ペルシアのゾロアスター教ミッションを完了させる。"
+ NEW_ACHIEVEMENT_115_NAME:0 "It's all coming together"
+ NEW_ACHIEVEMENT_115_DESC:0 "インカミッションツリーを達成する（日沈む地からの侵略ミッションは除く）"
+ NEW_ACHIEVEMENT_116_NAME:0 "ドージェ硬貨"
+ NEW_ACHIEVEMENT_116_DESC:0 "ヴェネツィアで開始し、経済覇権国になる。"
+ NEW_ACHIEVEMENT_117_NAME:0 "真実は勝つ"
+ NEW_ACHIEVEMENT_117_DESC:0 "ボヘミアで開始し、フス派を公式の宗教として皇帝になる。"
+ NEW_ACHIEVEMENT_118_NAME:0 "鷲は独力で飛ぶ"
+ NEW_ACHIEVEMENT_118_DESC:0 "ヒスン・カイファで開始し、扶養限界が500kに到達する。"
+ NEW_ACHIEVEMENT_119_NAME:0 "マヤパヒト？"
+ NEW_ACHIEVEMENT_119_DESC:0 "マヤのいずれかの国で開始し、マヤを形成した状態でジャワ島を領有するかジャワ島を領有する従属国を持つ。"
+ NEW_ACHIEVEMENT_120_NAME:0 "ハーンは一人だけだ！"
+ NEW_ACHIEVEMENT_120_DESC:0 "ステップの遊牧民で開始し、世界に他の遊牧民が存在しないことを確認する。"
+ NEW_ACHIEVEMENT_121_NAME:0 "Baborg"
+ NEW_ACHIEVEMENT_121_DESC:0 "ムガルとして、12以上の文化グループを同化する。"
+ NEW_ACHIEVEMENT_122_NAME:0 "私の沼地から出ていけ！"
+ NEW_ACHIEVEMENT_122_DESC:0 "オランダとして、すべての低地地方を領有し要塞防御力が50%に達する。"
+ NEW_ACHIEVEMENT_123_NAME:0 "Timurizz"
+ NEW_ACHIEVEMENT_123_DESC:0 "ティムールで開始し、威信75、100の信頼度と150以上の評価を持つ同盟国を5つ持つ。"
+ NEW_ACHIEVEMENT_124_NAME:0 "The Hungarian Games"
+ NEW_ACHIEVEMENT_124_DESC:0 "ハンガリーで開始し、異なる12の国との戦闘に黒軍で23回勝利する"
