--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -125,7 +125,7 @@
  liguria_area:0 "リグーリア"
  liguria_area_name:0 "リグーリア"
  liguria_area_adj:0 "リグーリア"
- corsica_sardinia_area:1 "西地中海諸島"
+ corsica_sardinia_area:2 "ティレニア諸島"
  corsica_sardinia_area_name:0 "サルデーニャ"
  corsica_sardinia_area_adj:0 "サルデーニャ"
  sicily_area:1 "シチリア東部"
