--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -1425,7 +1425,7 @@
  free_cities.11.t:1 "[From.GetName]、反抗的な貴族に対する助力を嘆願"
  free_cities.11.d:1 "[From.Country.GetName]の自由都市が、[From.Country.GetName]の自由都市としての地位を嫌う領主貴族たちと争っていることが我々の注意を引いている。国は貴族を非難し、王室の称号や特権から解放された[From.Monarch.GetName]の世俗的な指導層を受け入れさせるよう、我々の助けを求めている。"
  free_cities.11.a:1 "彼らは我々の支援を待つことになる。"
- free_cities.11.b:1 "彼らが市民を処置することができないのであれば、彼らは本当に国を支配するのに適しているのか？"
+ free_cities.11.b:1 "市民に対処できない彼らが、本当に国を支配するに相応しいと言えるのか？"
  free_cities.12.t:1 "助けるか、妨げるか？"
  free_cities.12.d:1 "貴族たちは大胆になってきており、農民や市民たちを雇おうとし始めた。反乱に加わらせて我々および我らの自由都市としての地位に逆らおうというのだ。今のところはうまくいっていないが懸念材料だ。なぜなら、ごてごてした姓を名乗る傲慢な公爵たちによる平和を粉砕しようという試みに対して、我々はいつも苦労して平和を維持してきたからだ。[From.Country.GetName]の[From.Monarch.GetTitle][From.Monarch.GetName]は我々についてどう考えているのだろうか？[From.Monarch.GetSheHe]は、約束を守り、これらの手に負えない貴族たちと決着をつけてくれるのだろうか？"
  free_cities.12.a:1 "助けが[From.Monarch.GetTitle]から到着した！"
