--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -296,7 +296,6 @@
  peasant_revolt_leader_personality_die_desc:1 "支配者は農民や小市民の権利の擁護者だった。"
  desc_peasant_revolt_leader_personality:1 "この支配者は自国の農民の擁護者です。"
  desc_iron_crowned_personality:1 "この支配者は、火によって鍛えられた強力な征服者としての特質を備えている。"
- desc_fu_papal_puppetmaster_personality:1 "この支配者は、教皇の座の影で絶大な影響力を持っている。"
  desc_tur_silk_road_main_trade_post:1 "この州はシルクロードを横断する重要な地点である。"
  monarchy_mechanic_desc:0 ""
  republic_mechanic_desc:0 ""
@@ -349,9 +348,9 @@
  gov_coastal_government:0 "沿岸政府"
  scaling_with_estate_influence_tt:0 "§Y影響度に比例§!\n§Y100%§!の影響度でこの特権は以下の効果を与えます："
  scaling_with_estate_loyalty_tt:0 "§Y忠誠度に比例§!\n§Y100%§!の忠誠度でこの特権は以下の効果を与えます："
- when_loyal_tt:0 "§G忠実（忠誠度60%以上）かつ影響度100%のとき§!："
- when_neutral_tt:0 "§Y中立（忠誠度30%～60%）かつ影響度100%のとき§!："
- when_disloyal_tt:0 "§R不忠（忠誠度30%以下）かつ影響度100%のとき§!："
+ when_loyal_tt:1 "§G忠実（忠誠度60%以上）かつ影響度100%のとき§!："
+ when_neutral_tt:1 "§Y中立（忠誠度30%～60%）かつ影響度100%のとき§!："
+ when_disloyal_tt:1 "§R不忠（忠誠度30%以下）かつ影響度100%のとき§!："
  UNTIL_REVOKED:0 "廃止されるまで"
  estate_church_clerical_education_loyal:0 "宗教的教育"
  estate_church_clerical_education_neutral:0 "宗教的教育"
@@ -522,3 +521,4 @@
  desc_ASK_FOR_CONTRIBUTION_VAISYAS_level_3:0 ""
  desc_ASK_FOR_CONTRIBUTION_VAISYAS_level_4:0 ""
  rnw_modifier_weights:0 ""
+ desc_papal_puppetmaster_personality:1 "この支配者は、教皇の座において舞台裏で絶大な影響力を持っている。"
