--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -215,10 +215,10 @@
  zabt_reform_desc:0 "行政の浸透は、この地域内のどんな帝国にとっても最大の障害となっている。経済生産性を奨励することは国家の利益のためとなり、このことを常に心に留めて置かねばならず、また同時に地域経済を常に注視せねばならない。我々が目標とする数多くの臣民を簡単に管理する方法はないので、この問題を解決するには、大量の資源と約束事が必要だ。\n土地や作物栽培、土地収入、地方経済に関する定期的な土地測量を行う行政を作ろう。さらに、常に全臣民に現金払いを要求し、現地経済の奨励を必要とする際はより軽減された課税を提供せねばならない。"
  FEDERAL_KINGDOM:0 "連邦王国"
  FEDERAL_EMPIRE:0 "連邦帝国"
- mechanic_enables_plutocratic_idea_group_yes:1 "§Y富豪§!アイデアを許可します"
- mechanic_enables_plutocratic_idea_group_no:1 "§Y富豪§!アイデアを許可しない"
- mechanic_enables_aristocratic_idea_group_yes:1 "§Y貴族§!アイデアを許可します"
- mechanic_enables_aristocratic_idea_group_no:1 "§Y貴族§!アイデアを許可しない"
+ mechanic_enables_plutocratic_idea_group_yes:1 "§Y富豪§!アイデアを許可します。"
+ mechanic_enables_plutocratic_idea_group_no:1 "§Y富豪§!アイデアを禁止します。"
+ mechanic_enables_aristocratic_idea_group_yes:1 "§Y貴族§!アイデアを許可します。"
+ mechanic_enables_aristocratic_idea_group_no:1 "§Y貴族§!アイデアを禁止します。"
  mechanic_allow_convert_yes:0 ""
  mechanic_allow_convert_no:1 ""
  mechanic_papacy_yes:1 "§Y教皇§!である"
@@ -325,8 +325,8 @@
  great_mongol_state_legacy_desc:0 "チンギス・ハーンのモンゴル帝国は我々のリーダーシップの下、復活した。大ハーンによって確立された政府の制度を再構築すると共に、彼の後継者に有るまじき誤りを避けている。"
  great_mongol_state_reform:0 "モンゴル大ハーン国"
  great_mongol_state_reform_desc:0 "チンギス・ハーンのモンゴル帝国は我々のリーダーシップの下、復活した。大ハーンによって確立された政府の制度を再構築すると共に、彼の後継者に有るまじき誤りを避けている。"
- mechanic_has_term_election_yes:0 ""
- mechanic_has_term_election_no:0 ""
+ mechanic_has_term_election_yes:1 "§Y選挙§!を許可"
+ mechanic_has_term_election_no:1 "§Y選挙§!を許可しない"
  NEEDS_REGULAR_ELECTIONS:0 "統治者は生涯支配してはならない。"
  mechanic_allow_banners_yes:1 "§Y八旗§!の招集を許可"
  mechanic_allow_banners_no:0 ""
