--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -2783,7 +2783,7 @@
  SM_WATER:0 "詳細な水"
  hungarian_hussarDESCR:0 "華麗なハンガリー軽騎兵ユニットは、その高い規律と能力により、ヨーロッパ全土において有名である。"
  CREATE_NATIVE:0 "敵対的な原住民、$SIZE$部族が$WHERE$に現れます。\n"
- CHANGE_SIEGE:0 "$WHERE$における$WHO$の包囲により$SIZE$ペナルティが発生します。"
+ CHANGE_SIEGE:1 "$WHERE$における$WHO$の包囲により$SIZE$ペナルティが発生します。\n"
  SIEGE_DEFENDERS:0 "防御軍"
  SIEGE_ATTACKERS:0 "攻撃軍"
  SIEGE_MINOR:0 "小規模の"
@@ -4807,7 +4807,7 @@
  persian_nation_title:0 "ペルシア国家の形成"
  persian_nation_desc:1 "ペルシアの地は、大キュロス以来、常に強大な帝国の所在地であった。近隣の諸地域が征服され、イラン国家復活の可能性はもはやないとは言えない今こそ、$MONARCH$が正当な栄光とイラン国王の称号を取り戻す時である。"
  mughal_nation_title:0 "ムガル帝国の形成"
- mughal_nation_desc:0 "$MONARCH$は彼の新しい帝国の基礎を築き始めている。数に劣るにもかかわらず、彼のよく訓練された軍隊はインドのスルタンに対していくつかの決定的な勝利を達成することができた。$CAPITAL$の戦いは、一連の領土拡大の最初の大きな勝利となり、時を経て、ムガル帝国はインドの高原の大部分に及んでいる。"
+ mughal_nation_desc:1 "$MONARCH$は彼の新しい帝国の基礎を築き始めている。数に劣るにもかかわらず、彼のよく訓練された軍隊はインドのスルタンに対していくつかの決定的な勝利を達成することができた。[522.GetCapitalName]の戦いは、一連の領土拡大の最初の大きな勝利となり、時を経て、ムガル帝国はインドの高原の大部分に及んでいる。"
  irish_nation_title:0 "アイルランド国家の形成"
  irish_nation_desc:0 "何十年もの間、イングランドはアイルランドの人々を征服し、島を支配しようとしている。唯一の旗の下でアイルランドの土地を統一することは、我々が彼らを撃退する唯一の機会かもしれない。"
  british_nation_title:0 "イギリス国家の形成"
@@ -5313,8 +5313,8 @@
  timurid_break_the_persian_border_desc:0 "ティムールによるペルシアの土地の征服は、我々の王朝の確立を助けた。今、我々は王朝を安泰に保つために再び前進しなければならない。"
  conquer_sivas_title:0 "スイヴァスの征服"
  conquer_sivas_desc:0 "ルームの成り上がりのスルタンは、我々の優位性を認めようとしない。我々は偉大な遊牧民を率いて西の小アジアへ入り、彼らに誰が支配者であるかを示す必要がある。"
- annex_the_jalayrids_title:0 "ジャラーイールの征服"
- annex_the_jalayrids_desc:0 "ジャラーイールのスルタンはティムール王国の優越性を認めることを再び拒否した。我々は再び彼らを征服し、決して彼らが再び立ち上がることのないようにしなければならない。"
+ annex_the_jalayrids_title:0 "ジャライルの征服"
+ annex_the_jalayrids_desc:0 "ジャライルのスルタンはティムール王国の優越性を認めることを再び拒否した。我々は再び彼らを征服し、決して彼らが再び立ち上がることのないようにしなければならない。"
  vassalize_the_akkoyunlu_title:0 "白羊朝を属国化"
  vassalize_the_akkoyunlu_desc:0 "偉大なハーン、ティムールは忠実な奉仕の報酬として、白羊朝のテュルク人たちに惜しみなく土地を与えた。しかし、彼らの不誠実が明らかとなり、処罰されなければならない。"
  vassalize_the_qara_qoyunlu_title:0 "黒羊朝を属国化"
@@ -6483,12 +6483,12 @@
  privateer_desc:0 "私掠船長は、自身と王室の利益のために幾度となく敵の商取引を襲撃した人物である。彼は敵を屈服させるために必要なものを正確に理解している。"
  sergeant_major_general_desc:0 "伝統的に、軍の非貴族の上位の司令官である少将は、良き司令官を見る目を持った白髪交じりの熟練者である。彼の賢明な助言で、我々は早期に約束された士官を特定することができる。"
  army_organiser_desc:0 "近代的な軍隊を運営するのは簡単なことではない。古き良き時代、あなたは貴族や彼らの従者を集め、戦場へ出て戦ったものだ。最近は、あなたは物事を整理しなければならず、それを行うことができる者は、非常に価値がある。"
- commandant_desc:0 "熟練した訓練者である、司令官は、我々の軍隊を確実に熱意を持って訓練することを約束する。下士官の不平の数を見る限り、彼は良い仕事をしている。"
+ commandant_desc:1 "熟練した訓練者である、司令官は、我々の軍隊を確実に熱意を持って訓練することを約束する。下士官らからの苦情の数を見る限り、パフォーマンスはこれ以上ないほどだ。"
  quartermaster_desc:0 "弾薬、食糧、そして最も重要な、砲弾の餌食となる新兵たちを軍隊に供給することは重要な任務である。あなたの管理に優れた需品将校がいれば、常に満足するだろう。"
  recruitmaster_desc:0 "軍服を満たすための肉体を発見することは、時に困難な任務である場合がある。募兵長はあらゆる秘訣を理解しており、奉仕すべき誰もがそれを避けることができないようにする。"
  fortification_expert_desc:0 "専門家はそれが芸術の形態のより多くであると主張するが、要塞を守ること自体は科学になりつつある。要塞のすべての最後の強みを絞り出すためには、防衛手順は絶えず更新されなければならない。"
  ambassador_desc:0 "大使は、外国の宮廷の内と外をよく知っているだけでなく、旅慣れた人物であり、重要な交渉において我々に強みを与えてくれる。"
- inquisitor_desc:0 "適切な信仰の正統性に従わない人々を根絶する経験を積んだ異端審問官は、政府内で奇妙な行為をしている者たちを見つけることができる。"
+ inquisitor_desc:1 "適切な信仰の正統性に従わない人々を根絶する経験を積んだ異端審問官は、政府内で奇妙な行為をしている者たちの発見に長けている。"
  grand_captain_desc:0 "兵士たちは、彼らが正しく指揮されていると感じると、常により良く戦うものだ。大提督は、一番上から陸軍全体に浸透する指導力を発揮する。"
  sheikh_ul_islam_title:0 "シェイ・ヒュル・イスラムの部局を設立"
  sheikh_ul_islam_desc:0 "政府の行為がイスラム法に従っていることを確実にするために、神の書物を深く知っている者によって保持される新しい部局を設立する。"
