--- a/extract/localisation/achievement_tooltips_l_english.yml
+++ b/extract/localisation/achievement_tooltips_l_english.yml
@@ -64,4 +64,5 @@
  achievement_mehmet_ambition_tooltip:0 "Owned by §Y[Root.GetName]§! or its §YCore Eyalet§! subjects."
  completed_incan_missions:0 "Complete the Incan mission tree (Sunset invasion missions excluded)"
  achievement_baborg_tooltip:0 "Assimilate at least §Y12§! culture groups (§Y[Root.GetNumAssimilatedCultureGroups]§!/§Y12§!)"
- achievement_the_hungarian_games_tooltip:0 "Win §Y23§! battles with either §YBlack Army§! or the §YBlack Army Reserves§! mercenary company against at least §Y12§! different countries (§Y[Root.GetBlackArmyBattleVictories]§!/§Y23§!)."
+ achievement_the_hungarian_games_tooltip:1 "Win §Y23§! battles with either §YBlack Army§! or the §YBlack Army Reserves§! mercenary company against at least §Y12§! different countries (§Y[Root.GetBlackArmyBattleVictories]§!/§Y23§!).\nYou can win only §Y3§! battles against the same country"
+ achievement_there_khan_only_be_one_tooltip:0 "No other country (excluding §Y[Root.GetName]§!) with the §YSteppe Nomads§! or the §YGreat Mongol State§! government reform exists."
