--- a/extract/localisation/achievements_l_english.yml
+++ b/extract/localisation/achievements_l_english.yml
@@ -53,8 +53,8 @@
  NEW_ACHIEVEMENT_1_27_DESC:0 "Gain at least 7.0 land morale."
  NEW_ACHIEVEMENT_1_28_NAME:0 "This navy can take it all"
  NEW_ACHIEVEMENT_1_28_DESC:0 "Gain at least 7.0 naval morale."
- NEW_ACHIEVEMENT_1_29_NAME:0 "The pen is mightier than the sword"
- NEW_ACHIEVEMENT_1_29_DESC:0 "Have three unions at the same time as Austria."
+ NEW_ACHIEVEMENT_1_29_NAME:0 "The Pen is Mightier than the Sword"
+ NEW_ACHIEVEMENT_1_29_DESC:1 "Have three unions at the same time as Austria or Austria-Hungary."
  NEW_ACHIEVEMENT_1_30_NAME:0 "Traditional Player"
  NEW_ACHIEVEMENT_1_30_DESC:0 "More than 90 percent Naval and Army Tradition."
  NEW_ACHIEVEMENT_1_31_NAME:0 "It's all about luck"
@@ -260,7 +260,7 @@
  NEW_ACHIEVEMENT_9_4_NAME:0 "Subsidize my Love"
  NEW_ACHIEVEMENT_9_4_DESC:0 "Subsidize 3 different allies at least 50% of their monthly income without running a deficit."
  NEW_ACHIEVEMENT_9_5_NAME:0 "Take that, von Habsburgs!"
- NEW_ACHIEVEMENT_9_5_DESC:0 "As Hungary, own all of Austria as core provinces."
+ NEW_ACHIEVEMENT_9_5_DESC:1 "Starting as Hungary, own all of Austria as core provinces."
  NEW_ACHIEVEMENT_9_6_NAME:0 "The White Elephant"
  NEW_ACHIEVEMENT_9_6_DESC:1 "As Ayutthaya, own all of Indochina and Burma as core provinces."
  NEW_ACHIEVEMENT_9_7_NAME:0 "The Buddhists Strike Back"
@@ -542,7 +542,7 @@
  NEW_ACHIEVEMENT_18_NAME:0 "Sweet Home Qaraqorum"
  NEW_ACHIEVEMENT_18_DESC:0 "As the Mughals assimilate Mongolian culture."
  NEW_ACHIEVEMENT_19_NAME:0 "The Ostenders"
- NEW_ACHIEVEMENT_19_DESC:0 "As Austria have the District and Military Administration investments in the West Bengal area."
+ NEW_ACHIEVEMENT_19_DESC:1 "As Austria or AH have the District and Military Administration investments in the West Bengal area."
  NEW_ACHIEVEMENT_20_NAME:0 "Ganges Khan"
  NEW_ACHIEVEMENT_20_DESC:0 "Start as Tribal nation in India and become a Steppe Horde."
  NEW_ACHIEVEMENT_21_NAME:0 "Foul Mouthed"
@@ -750,12 +750,12 @@
  NEW_ACHIEVEMENT_119_NAME:0 "Mayapahit?"
  NEW_ACHIEVEMENT_119_DESC:0 "Starting as any Mayan country, form Maya and own or have a subject own the island of Java."
  NEW_ACHIEVEMENT_120_NAME:0 "There Khan only be one!"
- NEW_ACHIEVEMENT_120_DESC:0 "Starting as a Steppe Horde, ensure there exists no other horde on the world."
+ NEW_ACHIEVEMENT_120_DESC:1 "Starting as a Steppe Horde, ensure there exists no other horde than you in the world."
  NEW_ACHIEVEMENT_121_NAME:0 "Baborg"
  NEW_ACHIEVEMENT_121_DESC:0 "As the Mughals, assimilate at least 12 culture groups."
  NEW_ACHIEVEMENT_122_NAME:0 "Get out of my swamp!"
  NEW_ACHIEVEMENT_122_DESC:0 "As the Netherlands, own all of the Low Countries and have 50% or more Fort Defense."
  NEW_ACHIEVEMENT_123_NAME:0 "Timurizz"
- NEW_ACHIEVEMENT_123_DESC:0 "Starting as the Timurids, have 75 prestige, 5 allies with 100 Trust and 150 opinion "
+ NEW_ACHIEVEMENT_123_DESC:1 "Starting as the Timurids, have 75 prestige, and 5 allies with 100 Trust and 150 opinion."
  NEW_ACHIEVEMENT_124_NAME:0 "The Hungarian Games"
  NEW_ACHIEVEMENT_124_DESC:0 "Starting as Hungary, win 23 battles with the Black Army against at least 12 different countries."
