--- a/extract/localisation/prov_names_adj_l_english.yml
+++ b/extract/localisation/prov_names_adj_l_english.yml
@@ -1647,7 +1647,7 @@
  PROV_ADJ1645:0 "Eastern Indian Ocean South Equatorial Current"
  PROV_ADJ1646:0 "Indian Ocean South Equatorial Current"
  PROV_ADJ1647:0 "Western Indian Ocean South Equatorial Current"
- PROV_ADJ1648:0 "Lake Tchad"
+ PROV_ADJ1648:0 "Lake Chad"
  PROV_ADJ1649:0 "Lake Victorian"
  PROV_ADJ1650:0 "Lake Tanganyika"
  PROV_ADJ1651:0 "Lake Malawi"
