--- a/extract/localisation/prov_names_l_english.yml
+++ b/extract/localisation/prov_names_l_english.yml
@@ -1646,7 +1646,7 @@
  PROV1645:0 "Eastern Indian Ocean South Equatorial Current"
  PROV1646:0 "Indian Ocean South Equatorial Current"
  PROV1647:0 "Western Indian Ocean South Equatorial Current"
- PROV1648:0 "Lake Tchad"
+ PROV1648:0 "Lake Chad"
  PROV1649:0 "Lake Victoria"
  PROV1650:0 "Lake Tanganyika"
  PROV1651:0 "Lake Malawi"
