--- a/extract/localisation/sprite_packs_l_english.yml
+++ b/extract/localisation/sprite_packs_l_english.yml
@@ -285,6 +285,7 @@
  dlc116_FIN_sprite_pack:0 "Finland Sprites"
  dlc116_SHL_sprite_pack:0 "Holstein Sprites"
  dlc116_DIT_sprite_pack:0 "Dithmarschen Sprites"
+ dlc116_KRL_sprite_pack:0 "Karelian Sprites"
  dlc056_sie_sprite_pack:0 "Sienna Sprites"
  dlc057_mak_sprite_pack:0 "Makuria Sprites"
  dlc057_aju_sprite_pack:0 "Ajuuraan Sprites"
@@ -308,6 +309,8 @@
  dlc120_SUL_sprite_pack:0 "Filipino Sprites"
  dlc120_TOU_sprite_pack:0 "Toulouse Sprites"
  dlc120_WUU_sprite_pack:0 "Southern China Sprites"
+ dlc120_MIA_sprite_pack:0 "Miao Sprites"
+ dlc120_YI_sprite_pack:0 "Yi Sprites"
 
  dlc129_ARM_sprite_pack:0 "Armenia Sprites"
  dlc129_CYP_sprite_pack:0 "Cyprus Sprites"
@@ -326,3 +329,5 @@
  dlc137_WES_sprite_pack:0 "Westphalian Sprites"
  dlc137_CRO_sprite_pack:0 "Croatian Sprites"
  dlc137_MOL_sprite_pack:0 "Moldavian Sprites"
+ dlc137_LOW_sprite_pack:0 "Lower Saxon Sprites"
+ dlc137_SLO_sprite_pack:0 "Slovene Sprites"
